Update test2.java